<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	android:orientation="vertical" >
	<include layout="@layout/include_titlebar" />
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/white"
				android:orientation="vertical"
				android:paddingLeft="15dp" >
				<!-- 我的手机 -->
				<LinearLayout
					android:id="@+id/phone_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:drawableLeft="@drawable/ic_personal_setting_phone"
						android:text="@string/user_setting_phone" />
					<TextView
						android:id="@+id/phone_tv"
						style="@style/PersonalInfo" />
				</LinearLayout>
				<!-- 实名认证 -->
				<LinearLayout
					android:id="@+id/real_id_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:drawableLeft="@drawable/ic_personal_setting_name"
						android:text="@string/user_setting_realname" />
					<TextView
						android:id="@+id/tv_realname"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@android:color/darker_gray" />
				</LinearLayout>
				<!-- 身份认证 -->
				<LinearLayout
					android:id="@+id/cid_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:layout_width="0dp"
						android:layout_weight="1"
						android:drawableLeft="@drawable/icon_sfz"
						android:text="@string/user_setting_cid" />
					<TextView
						android:id="@+id/tv_cid"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@android:color/darker_gray" />
				</LinearLayout>
				<!-- 我的银行卡 -->
				<LinearLayout
					android:id="@+id/bank_card_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:drawableLeft="@drawable/ic_personal_setting_bank_card"
						android:text="@string/user_setting_bank" />
					<TextView
						android:id="@+id/bank_card_tv"
						style="@style/PersonalInfo" />
				</LinearLayout>
				<!-- 通讯地址 -->
				<LinearLayout
					android:id="@+id/mailing_addr_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:drawableLeft="@drawable/ic_personal_setting_mailing_addr"
						android:text="@string/user_setting_address" />
					<TextView
						android:id="@+id/mailing_addr_tv"
						style="@style/PersonalInfo" />
				</LinearLayout>
				<!-- 我的邮箱 -->
				<LinearLayout
					android:id="@+id/email_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:drawableLeft="@drawable/ic_personal_setting_email"
						android:text="@string/user_setting_email" />
					<TextView
						android:id="@+id/email_tv"
						style="@style/PersonalInfo" />
				</LinearLayout>
				<!-- 修改密码 -->
				<LinearLayout
					android:id="@+id/password_llyt"
					style="@style/PersonalSettingItemLayout" >
					<TextView
						style="@style/PersonalInfoIcon"
						android:drawableLeft="@drawable/ic_personal_setting_password"
						android:text="@string/user_setting_password" />
					<TextView style="@style/PersonalInfo" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>