<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<include layout="@layout/include_titlebar" />
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical" >
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingLeft="20dp"
				android:paddingTop="15dp" >
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:orientation="horizontal" >
					<!-- logo -->
					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/iv_about_us" />
					<!-- 标题版本 -->
					<RelativeLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical"
						android:paddingBottom="5dp"
						android:paddingLeft="15dp"
						android:paddingTop="5dp" >
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="掌财顾问"
							android:textAppearance="@android:style/TextAppearance.Large" />
						<TextView
							android:id="@+id/tv_version"
							style="@style/text_18_s_b_n"
							android:layout_alignParentBottom="true"
							android:text="版本号：V1.1.3"
							android:textColor="@color/color_zc_gray_light" />
					</RelativeLayout>
				</LinearLayout>
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginRight="10dp"
					android:layout_marginTop="25dp"
					android:lineSpacingExtra="3dp"
					android:text="@string/about_introduction"
					android:textColor="@android:color/darker_gray" />
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:background="@drawable/bg_input_layout"
				android:orientation="vertical"
				android:paddingLeft="25dp" >
				<LinearLayout
					android:id="@+id/ll_official_website"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/bg_edit_up"
					android:orientation="horizontal" >
					<TextView
						style="@style/text_18_s_b_n"
						android:layout_width="0dp"
						android:layout_gravity="center_vertical"
						android:layout_weight="1"
						android:gravity="left"
						android:text="@string/about_official_website" />
					<TextView
						style="@style/text_18_s_b_n"
						android:layout_width="wrap_content"
						android:layout_gravity="center_vertical|right"
						android:layout_marginRight="10dp"
						android:drawablePadding="5dp"
						android:drawableRight="@drawable/iv_target_icon"
						android:gravity="right"
						android:text="@string/about_website_url"
						android:textColor="@color/color_zc_orange" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/ll_cooperation_line"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/bg_edit_up"
					android:orientation="horizontal" >
					<TextView
						style="@style/text_18_s_b_n"
						android:layout_width="0dp"
						android:layout_gravity="center_vertical"
						android:layout_weight="1"
						android:gravity="left"
						android:text="@string/about_cooperation" />
					<TextView
						style="@style/text_18_s_b_n"
						android:layout_width="wrap_content"
						android:layout_gravity="center_vertical|right"
						android:layout_marginRight="10dp"
						android:drawablePadding="5dp"
						android:drawableRight="@drawable/iv_target_icon"
						android:gravity="right"
						android:text="@string/about_coope_phone"
						android:textColor="@color/color_zc_orange" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/ll_hot_line"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/bg_edit_up"
					android:orientation="horizontal" >
					<TextView
						style="@style/text_18_s_b_n"
						android:layout_width="0dp"
						android:layout_gravity="center_vertical"
						android:layout_weight="1"
						android:gravity="left"
						android:text="@string/about_hot_line" />
					<TextView
						style="@style/text_18_s_b_n"
						android:layout_width="wrap_content"
						android:layout_gravity="center_vertical|right"
						android:layout_marginRight="10dp"
						android:drawablePadding="5dp"
						android:drawableRight="@drawable/iv_target_icon"
						android:gravity="right"
						android:text="@string/about_server_phone"
						android:textColor="@color/color_zc_orange" />
				</LinearLayout>
			</LinearLayout>
			<TextView
				style="@style/text_18_s_b_n"
				android:layout_margin="10dp"
				android:text="@string/about_right"
				android:textColor="@color/color_zc_gray_light"
				android:textSize="14sp" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>