<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/include_titlebar" />
    <!-- 请输入短信验证码 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="短信验证"
        android:textColor="@android:color/darker_gray" />
    <!-- 请输入短信验证码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/input_et_margin_left"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >
        <EditText
            android:id="@+id/input_sms_captcha_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_sms_captcha"
            android:singleLine="true" />
        <CheckBox
            android:id="@+id/get_sms_captcha_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_get_sms_captcha"
            android:button="@null"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:paddingTop="7dp"
            android:text="@string/get_sms_captcha"
            android:textColor="@color/textcolor_get_sms_captcha" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/input_et_margin_left"
        android:layout_marginTop="20dp"
        android:text="设置密码"
        android:textColor="@android:color/darker_gray" />
    <!-- 请输入新密码     请再次输入新密码 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_input_layout"
        android:orientation="vertical"
        android:paddingLeft="@dimen/input_et_margin_left" >
        <EditText
            android:id="@+id/input_new_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_up"
            android:hint="@string/please_input_new_password"
            android:inputType="textPassword"
            android:singleLine="true" />
        <EditText
            android:id="@+id/input_new_password_again_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_down"
            android:hint="@string/please_input_new_password_again"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>
    <!-- 确定 -->
    <Button
        android:id="@+id/certain_btn"
        style="@style/RedButton"
        android:layout_marginLeft="@dimen/input_et_margin_left"
        android:layout_marginRight="@dimen/input_et_margin_left"
        android:layout_marginTop="45dp"
        android:text="@string/certain" />
</LinearLayout>